add spectral build files

--- a/lab/spectral/index.html
+++ b/lab/spectral/index.html
@@ -25,12 +25,68 @@
       position: absolute;
       top: 0;
       right: 0;
-      z-index: 999;
+      z-index: 1;
       margin: 2em; 
     }
 
+    @keyframes rotate {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(359.9deg);
+      }
+    }
+
+    .loader {
+      opacity: 0;
+      position: absolute;
+      margin: 1em;
+      width: 2em;
+      height: 2em;
+      border: 2px solid white;
+      border-radius: 50%;
+      border-color: white white transparent white;
+      animation: rotate 0.3s linear infinite;
+      z-index: 2;
+      transition: opacity 0.75s;
+    }
+
+    .go {
+      opacity: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 3;
+      transition: opacity 2s;
+    }
+
+    .go > span {
+      border-radius: 50%;
+      background: white;
+      font-family: sans-serif;
+      text-align: center;
+      vertical-align: middle;
+      line-height: 5em;
+      height: 5em;
+      width: 5em;
+      cursor: pointer;
+    }
+
+    .active {
+      opacity: 1;
+    }
   </style>
 </head>
 <body>
+  <div id="loader" class="loader active"></div>
+  <div id="go" class="go active">
+    <span>tap me</span>
+  </div>
 <script type="text/javascript" src="app.bundle.js"></script></body>
 </html>
